atualizar arquivos da aula 3 para base ficar sincronizada

--- a/slides/semana_3/semana_3_distribuicoes_e_associacoes.qmd
+++ b/slides/semana_3/semana_3_distribuicoes_e_associacoes.qmd
@@ -159,3 +159,11 @@ head(pacientes)
 ![](../assets/logo_dplyr.png){fig-align="center" width=45%}
 
 
+## Vamos dar uma olhada nos `pacientes`
+
+`dplyr` nos dá acesso a função `glimpse()` para inspecionar dataframes.
+
+```{r glimpse-pacientes}
+glimpse(pacientes)
+```
+
