--- a/sobre.qmd
+++ b/sobre.qmd
@@ -14,12 +14,12 @@ para os integrantes do grupo de pesquisa Alliance.
 O plano de aulas seguirá as seguintes aulas:
 
 1. R e RStudio
-2. Fundamentos de estatística no R
-3. Distribuições e associações
-4. Visualização de dados
-5. Inferência estatística
-6. Modelos lineares
-7. Modelos lineares generalizados
+2. Manipulação de dados
+3. Visualização de dados
+4. Análise descritiva
+5. Análise inferencial
+6. Modelos de regressão
+7. Tópicos avançados
 
 Ou seja, a princípio, realizaremos sete aulas com duração entre 1 e 2 horas.
 
