--- a/index.qmd
+++ b/index.qmd
@@ -99,7 +99,7 @@ o *An Introduction to Statistical Learning*, mas trabalha mais conceitos estatí
   - [Código para gerar os slides da Aula 1: R e RStudio](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/1_r_rstudio/slides_r_e_rstudio.qmd)
 
 * [Slides da Aula 2: Manipulação de dados](slides/2_manipulacao/slides_manipulacao.html)
-  - [Código para gerar os slides da Aula 2: Fundamentos de estatística em R](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/2_manipulacao/slides_manipulacao.qmd)
+  - [Código para gerar os slides da Aula 2: Manipulação de dados](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/2_manipulacao/slides_manipulacao.qmd)
   
 * [Slides da Aula 3: Visualização de dados](slides/3_visualizacao/slides_visualizacao.html)
   - [Código para gerar os slides da Aula 3: Visualização de dados](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/3_visualizacao/slides_visualizacao.qmd)
