pequeno ajuste no slide da aula 1, e adição sobre caminhos na aula 2

--- a/slides/1_r_e_rstudio/slides_r_e_rstudio.qmd
+++ b/slides/1_r_e_rstudio/slides_r_e_rstudio.qmd
@@ -601,11 +601,15 @@ funcionalidades no R.
 
 ::: {.column width="46%"}
 
-![`install.packages("nomedopacote")`](../assets/rapaz_colocando_lampada.jpg){fig-align="center"}
+Instale uma vez!
+
+![`install.packages("lampada")`](../assets/rapaz_colocando_lampada.jpg){fig-align="center"}
 :::
 
 ::: {.column width="54%"}
-![`library(nomedopacote)`](../assets/rapaz_ligando_lampada.jpg)
+Use variás vezes!
+
+![`library(lampada)`](../assets/rapaz_ligando_lampada.jpg)
 :::
 
 ::::
